<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ElectronicCalc</string>
    <string name="empty" />
    <!-- Fragment Resistor Calc Strings -->
    <string name="calc_title">CALCULADORA DE RESISTENCIAS \nPOR COLOR</string>
    <string name="no_bands_label">Numero de \nBandas:</string>
    <string name="four_bands_label">4</string>
    <string name="five_bands_label">5</string>
    <string name="six_bands_label">6</string>
    <string name="colors">COLORES</string>
    <string name="color1_title">Banda 1</string>
    <string name="color2_title">Banda 2</string>
    <string name="color3_title">Banda 3</string>
    <string name="multiplier_title">Multiplicador</string>
    <string name="tolerance_title">Tolerancia</string>
    <string name="ppm_title">PPM</string>
    <string name="trv_label">Resistencia \n(valor teorico):</string>
    <string name="trv_value">%s ohms</string>
    <string name="erv_label">Res. valor experimental</string>
    <string name="tolerance_label">Tolerancia:</string>
    <string name="tolerance_value">%s %%</string>
    <string name="ppm_label">ppm:</string>
    <string name="erv_value_hint">digite valor entero</string>
    <string name="details_button">detalles</string>
    <string name="erv_empty_value">No hay valor de resistencia experimental!</string>
    <string name="return_to_calc_btn">regresar a calculadora</string>
    <string-array name="color_options">
        <item>@string/empty</item>
        <item>Negro</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
    </string-array>
    <string-array name="multiplier_options">
        <item>@string/empty</item>
        <item>Negro</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Blanco</item>
        <item>Dorado</item>
        <item>Plateado</item>
    </string-array>
    <string-array name="tolerance_options">
        <item>@string/empty</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Verde</item>
        <item>Azul</item>
        <item>Violeta</item>
        <item>Gris</item>
        <item>Dorado</item>
        <item>Plateado</item>
    </string-array>
    <string-array name="ppm_options">
        <item>@string/empty</item>
        <item>Cafe</item>
        <item>Rojo</item>
        <item>Naranja</item>
        <item>Amarillo</item>
        <item>Azul</item>
        <item>Violeta</item>
    </string-array>

    <!-- Fragment Resistor Details Strings-->
    <string name="details_title">DETALLES DE LA RESISTENCIA</string>
    <string name="theoretical_value_title">Valor Teorico:</string>
    <string name="tolerance_value_title">Tolerancia:</string>
    <string name="exp_value_title">Valor Experimental:</string>
    <string name="exp_value">%s ohms</string>
    <string name="val_max_title">Valor Max:</string>
    <string name="val_max_value">%s ohms</string>
    <string name="val_min_title">Valor min</string>
    <string name="val_min_value">%s ohms</string>
    <string name="state_title">Estado:</string>
    <!-- Fragment Initial-->
    <string name="app_title">Calculadora Electrónica</string>
    <string name="res_calc_color_btn">RESISTENCIAS POR COLORES</string>
    <string name="res_calc_value_btn">RESISTENCIAS POR VALORES</string>
    <string name="res_calc_num_sys_btn">SISTEMAS NUMERICOS</string>
    <!-- Fragment from value resistor-->
    <string name="calc_value_title">CALCULADORA DE RESISTENCIAS \nPOR VALOR</string>
    <string name="more_than_9_ohms_message">El valor de la resistencia debe ser mayor a 9 ohms!</string>
    <string name="more_than_99_ohms_message">El valor de la resistencia debe ser mayor a 99 ohms!</string>
    <string name="more_than_max_resistor_message">El valor de la resistencia supera el rango maximo!</string>
    <string name="error_input_message">Error en el valor ingresado!</string>
    <string name="not_selected_values_message">Hay valores sin seleccionar!</string>
    <string name="less_than_5_bands_message">La resistencia parece tener menos de 5 bandas</string>
    <string name="value_4_bands_option">4 bandas</string>
    <string name="value_5_bands_option">5 bandas</string>
    <string name="value_6_bands_option">6 bandas</string>
    <string name="value_resist_hint">Valor de la resistencia</string>
    <string name="value_tolerance_label">Tolerancia</string>
    <string name="value_ppm_label">PPM</string>
    <string name="value_calc_btn">calcular</string>
    <string name="tolerance_value_brown">±1%</string>
    <string name="tolerance_value_red">±2%</string>
    <string name="tolerance_value_green">±0.5%</string>
    <string name="tolerance_value_blue">±0.25%</string>
    <string name="tolerance_value_violet">±0.1%</string>
    <string name="tolerance_value_grey">±0.05%</string>
    <string name="tolerance_value_gold">±5%</string>
    <string name="tolerance_value_silver">±10%</string>
    <string name="ppm_value_brown">100ppm</string>
    <string name="ppm_value_red">50ppm</string>
    <string name="ppm_value_orange">15ppm</string>
    <string name="ppm_value_yellow">25ppm</string>
    <string name="ppm_value_blue">10ppm</string>
    <string name="ppm_value_violet">5ppm</string>

    <!-- Fragment numeric system conversor-->
    <string name="num_sys_title">CONVERSOR DE SISTEMAS\nNUMERICOS</string>
    <string name="num_sys_label">Sistema Numerico</string>
    <string name="num_input_label">Ingrese un numero</string>
    <string name="bin_sys_label">Binario:</string>
    <string name="oct_sys_label">Octal:</string>
    <string name="dec_sys_label">Decimal:</string>
    <string name="hex_sys_label">Hexadecimal:</string>
    <string name="bin_sys_option">Binario</string>
    <string name="oct_sys_option">Octal</string>
    <string name="dec_sys_option">Decimal</string>
    <string name="hex_sys_option">Hexadecimal</string>
    <string name="default_value">0</string>

    <string-array name="numeric_system_options">
        <item>@string/bin_sys_option</item>
        <item>@string/oct_sys_option</item>
        <item>@string/dec_sys_option</item>
        <item>@string/hex_sys_option</item>
    </string-array>

    <string-array name="tolerance_numeric_options">
        <item>@string/empty</item>
        <item>@string/tolerance_value_brown</item>
        <item>@string/tolerance_value_red</item>
        <item>@string/tolerance_value_green</item>
        <item>@string/tolerance_value_blue</item>
        <item>@string/tolerance_value_violet</item>
        <item>@string/tolerance_value_grey</item>
        <item>@string/tolerance_value_gold</item>
        <item>@string/tolerance_value_silver</item>
    </string-array>

    <string-array name="ppm_numeric_options">
        <item>@string/empty</item>
        <item>@string/ppm_value_brown</item>
        <item>@string/ppm_value_red</item>
        <item>@string/ppm_value_orange</item>
        <item>@string/ppm_value_yellow</item>
        <item>@string/ppm_value_blue</item>
        <item>@string/ppm_value_violet</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>