<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.resistorcalc.ResistorDetailsFragment">

    <data>

        <variable
            name="viewModel"
            type="com.itc.resistorcalc.model.ResCalcViewModel" />

        <variable
            name="resistorDetailsFrag"
            type="com.itc.resistorcalc.view.resistorcalc.ResistorDetailsFragment" />
    </data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/details_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/details_title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/exp_value_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/exp_value_title"
                app:layout_constraintEnd_toStartOf="@+id/nominal_value_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_title" />

            <TextView
                android:id="@+id/exp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{@string/exp_value(viewModel.stringExpValue)}"
                app:layout_constraintEnd_toEndOf="@+id/exp_value_title"
                app:layout_constraintStart_toStartOf="@+id/exp_value_title"
                app:layout_constraintTop_toBottomOf="@+id/exp_value_title" />

            <TextView
                android:id="@+id/nominal_value_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theoretical_value_title"
                app:layout_constraintBottom_toBottomOf="@+id/exp_value_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/exp_value_title"
                app:layout_constraintTop_toTopOf="@+id/exp_value_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/nominal_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{@string/trv_value(viewModel.stringResistResult)}"
                app:layout_constraintEnd_toEndOf="@+id/nominal_value_title"
                app:layout_constraintStart_toStartOf="@+id/nominal_value_title"
                app:layout_constraintTop_toBottomOf="@+id/nominal_value_title" />

            <TextView
                android:id="@+id/val_max_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/val_max_title"
                app:layout_constraintEnd_toStartOf="@+id/val_min_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exp_value" />

            <TextView
                android:id="@+id/val_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{@string/val_max_value(viewModel.stringMaxVal)}"
                app:layout_constraintEnd_toEndOf="@+id/val_max_title"
                app:layout_constraintStart_toStartOf="@+id/val_max_title"
                app:layout_constraintTop_toBottomOf="@+id/val_max_title" />

            <TextView
                android:id="@+id/val_min_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/val_min_title"
                app:layout_constraintBottom_toBottomOf="@+id/val_max_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/val_max_title"
                app:layout_constraintTop_toTopOf="@+id/val_max_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/val_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{@string/val_min_value(viewModel.stringMinVal)}"
                app:layout_constraintEnd_toEndOf="@+id/val_min_title"
                app:layout_constraintStart_toStartOf="@+id/val_min_title"
                app:layout_constraintTop_toBottomOf="@+id/val_min_title" />

            <TextView
                android:id="@+id/tolerance_value_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tolerance_value_title"
                app:layout_constraintEnd_toStartOf="@+id/state_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/val_max" />

            <TextView
                android:id="@+id/tolerance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{@string/tolerance_value(viewModel.tolerance)}"
                app:layout_constraintEnd_toEndOf="@+id/tolerance_value_title"
                app:layout_constraintStart_toStartOf="@+id/tolerance_value_title"
                app:layout_constraintTop_toBottomOf="@+id/tolerance_value_title" />

            <TextView
                android:id="@+id/state_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state_title"
                app:layout_constraintBottom_toBottomOf="@+id/tolerance_value_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tolerance_value_title"
                app:layout_constraintTop_toTopOf="@+id/tolerance_value_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.state}"
                app:layout_constraintEnd_toEndOf="@+id/state_title"
                app:layout_constraintStart_toStartOf="@+id/state_title"
                app:layout_constraintTop_toBottomOf="@+id/state_title" />

            <Button
                android:id="@+id/return_to_calc_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> resistorDetailsFrag.returnToCalc()}"
                android:text="@string/return_to_calc_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tolerance_value" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>

